$Id$


2003/11/23 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- more work on IPC. I think I now have found the best method ;-)


2003/11/22 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in DB concerning loading of binary data
- added a warning to DB when an unknown type specifier is found (which
  defaults to "char")
- fixed a bug in RSA code concerning loading of keys from a DB
- first successful test of client/server IPC ;-)
  Now it basically works. I also fixed many bugs in the code which is not
  used by programs, since it is under heavy development.
- reading keys from a file and writing then to a file now works
- fixed a severe bug in "list"
- finally corrected spelling of Gwenhywfar ;-)
  Thanks to Thomas Viehmann for providing a nice conversion script ;-)


2003-11-21  Christian Stimming <stimming@tuhh.de>

	* README: Add some explanation of this package. Martin's
	proofreading still needed.

	* configure.ac: Add variables for rpm version. Changed name in
	AC_INIT_AUTOMAKE to conform to the package name and have the right
	spelling gwenhyWFar.

	* Makefile.am: Add targets for rpm packages.

	* gwenhywfar.spec.in: Add rpm spec file.


===========================================================================
MARK: released gwenhywfar-0.9beta5 (2003/11/21)
===========================================================================


2003/11/21 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed some compiler warnings
- more work on IPC


2003-11-19  Christian Stimming <stimming@tuhh.de>

	* configure.ac: Add compilation debug argument macro.


2003/11/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- should now work with OpenSSL 0.9.6 as well...
- again more work on IPC
- fixed some bugs


2003/11/17 Martin Preuss <martin@libchipcard.de>