@@ -4,6 +4,10 @@ $Id$
 2003/11/23 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
 - more work on IPC. I think I now have found the best method ;-)
+- IPC: added check for the correct key version when decrypting or verifying
+  a signature
+- removed some of Christian's FIXMEs in README, since he got it all
+  perfectly right ;-)
 
 
 2003/11/22 Martin Preuss <martin@libchipcard.de>
